--- a/sign-up.css
+++ b/sign-up.css
@@ -1,6 +1,3 @@
-/* sign-up.component.scss */
-
-/* Top header with FastRewards brand */
 .top-header {
   width: 100%;
   text-align: center;
@@ -16,7 +13,7 @@
 /* Overall page wrapper */
 .signup-page {
   background-color: #fff;
-  min-height: calc(100vh - 60px); /* optional: fill viewport */
+  min-height: calc(100vh - 60px);
   padding: 2rem 1rem;
 }
 
@@ -73,10 +70,10 @@
   text-align: left;
 }
 
-/* Red "Sign Up" button */
+/* "Sign Up" button */
 .sign-up-button {
   width: 100%;
-  background-color: #ff3b30; /* or your chosen red */
+  background-color: #ff3b30;
   color: #fff;
   font-size: 1rem;
   font-weight: 600;
@@ -87,7 +84,7 @@
   cursor: pointer;
 }
 
-/* Horizontal rule with "or" in the middle */
+/* Horizontal rule */
 .divider-row {
   display: flex;
   align-items: center;
